Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOIUH/MotXnjew1qMkYEQju",
+      "authorship_tag": "ABX9TyOeLC/UzK4XstghRXnOb4qm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10909,7 +10909,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10932,7 +10932,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10975,15 +10975,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "sNTwUUjH2TLk"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# printfでの出力\n",
@@ -11006,7 +10997,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11029,7 +11020,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11077,7 +11068,7 @@
           "height": 138
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11126,7 +11117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11149,7 +11140,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11163,10 +11154,80 @@
     {
       "cell_type": "code",
       "source": [
+        "# さらにフォーマット指定子の部分を変更することで出力する小数の桁数などの出力の仕方を\n",
+        "# 変更することができます。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  double pi = 3.14159265358979;\n",
+        "  // %.桁数f とすると小数点以下「桁数」だけ出力される\n",
+        "  printf(\"%.10lf\\n\", pi);\n",
+        "\n",
+        "  int x = 1;\n",
+        "  int y = 99;\n",
+        "  int z = 123;\n",
+        "  // %0桁数d とすると表示桁数が「桁数」に満たない場合に0埋めされる\n",
+        "  printf(\"%03d, %03d, %03d\\n\", x, y, z);\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "TkmyaqVmnzc_",
+        "outputId": "2b2ca109-f15a-4bb5-8225-2c0847a75210",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp"
+      ],
+      "metadata": {
+        "id": "-KMIorWZoE9l",
+        "outputId": "1c455bb6-672f-47db-98e5-303583921c99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.1415926536\n",
+            "001, 099, 123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "sNTwUUjH2TLk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# scanfでの入力\n",
         "# scanfという関数で入力を受け取ることもできます。\n",
-        "\n",
-        "Copy\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -11177,48 +11238,120 @@
         "  scanf(\"x = %d, pi = %lf\", &x, &pi);\n",
         " \n",
         "  printf(\"x = %d, pi = %lf\\n\", x, pi);\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "u-UsnO5SoIXu",
+        "outputId": "fa0a6bf9-5bd6-4619-9e10-9cae9573cae3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo x = 12345, pi = 3.141593 |./temp"
+      ],
+      "metadata": {
+        "id": "3wUItSCDU0tm",
+        "outputId": "fbb0ac41-b774-4d1f-da56-e70609e4f996",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 12345, pi = 3.141593\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# scanf(フォーマット文字列, &変数1, &変数2, &変数3, ...);\n",
+        "# 引数に渡す変数の前に&が必要なことに注意してください。\n",
+        "# フォーマット文字列は基本的にはprintfのものと同じです。\n",
+        "# ただし、string型の文字列を直接入力することはできません。 この場合はcinを使ってください。\n",
+        "# 空白文字の扱い\n",
+        "# %dなどのフォーマット指定子を指定した場合、直前に連続する空白文字を読み飛ばします。\n",
+        "# 空白文字とはスペース()、改行文字(\\n)、タブ文字(\\t)などのことです。\n",
+        "# 以下のような呼び出しに対し、123 456という文字列を入力した場合、xは123となり、yは456となります。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "\n",
+        " \n",
         "int main() {\n",
-        "  int x;\n",
-        "  double pi;\n",
+        "  int x, y;\n",
         "  // scanfによる入力\n",
-        "  scanf(\"x = %d, pi = %lf\", &x, &pi);\n",
-        "\n",
-        "  printf(\"x = %d, pi = %lf\\n\", x, pi);\n",
-        "}\n",
-        "入力\n",
-        "x = 12345, pi = 3.141593\n",
-        "実行結果\n",
-        "x = 12345, pi = 3.141593\n",
-        "scanfの使い方は次のとおりです。\n",
-        "\n",
-        "Copy\n",
-        "scanf(フォーマット文字列, &変数1, &変数2, &変数3, ...);scanf(フォーマット文字列, &変数1, &変数2, &変数3, ...);\n",
-        "引数に渡す変数の前に&が必要なことに注意してください。\n",
-        "\n",
-        "この記号の意味については「4.05.ポインタ」で扱います。\n",
-        "\n",
-        "フォーマット文字列は基本的にはprintfのものと同じです。\n",
-        "\n",
-        "ただし、string型の文字列を直接入力することはできません。 この場合はcinを使ってください。\n",
-        "\n",
-        "空白文字の扱い\n",
-        "%dなどのフォーマット指定子を指定した場合、直前に連続する空白文字を読み飛ばします。空白文字とはスペース()、改行文字(\\n)、タブ文字(\\t)などのことです。\n",
-        "\n",
-        "以下のような呼び出しに対し、123 456という文字列を入力した場合、xは123となり、yは456となります。\n",
-        "\n",
-        "Copy\n",
-        "scanf(\"%d%d\", &x, &y);scanf(\"%d%d\", &x, &y);\n",
-        "文字列との変換\n",
-        "to_string関数\n",
-        "数値型から文字列に変換するには、to_string関数を用います。\n",
-        "\n",
-        "to_string関数は、引数の数値をstring型に変換します。\n",
-        "\n",
-        "Copy\n",
+        "  scanf(\"%d%d\", &x, &y);\n",
+        "  printf(\"x = %d, y = %d\\n\", x, y);\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Dg4qmyeSUVYJ",
+        "outputId": "91edb667-36e0-4212-fe45-b626b07f0fb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 123 456 |./temp"
+      ],
+      "metadata": {
+        "id": "fl4j1FEuWfyP",
+        "outputId": "91566f4b-c417-4a29-a2e0-1c7100367c02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 123, y = 456\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 文字列との変換\n",
+        "# to_string関数\n",
+        "# 数値型から文字列に変換するには、to_string関数を用います。\n",
+        "# to_string関数は、引数の数値をstring型に変換します。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -11226,21 +11359,55 @@
         "  int number = 100;\n",
         "  string s = to_string(number);\n",
         "  cout << s + \"yen\" << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int number = 100;\n",
-        "  string s = to_string(number);\n",
-        "  cout << s + \"yen\" << endl;\n",
-        "}\n",
-        "実行結果\n",
-        "100yen\n",
-        "stoi関数\n",
-        "文字列からint型に変換するには、stoi関数を用います。\n",
-        "\n",
-        "Copy\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "OkLkqu_DWcxf",
+        "outputId": "2d627843-3180-4614-af90-7eb607561e1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 123 456 |./temp"
+      ],
+      "metadata": {
+        "id": "BE8rRXHhZdZX",
+        "outputId": "279e9ef3-a28c-4209-bd32-ff55a9f7b76b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100yen\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# stoi関数\n",
+        "# 文字列からint型に変換するには、stoi関数を用います。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -11248,32 +11415,121 @@
         "  string s = \"100\";\n",
         "  int n = stoi(s);\n",
         "  cout << n << endl;\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Lf54zl5uZaj9",
+        "outputId": "897cd496-dd77-41c7-cb20-1f9146ef8e51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 123 456 |./temp"
+      ],
+      "metadata": {
+        "id": "1Vj-4z0eZrHO",
+        "outputId": "35c385d9-d0d0-46a1-f680-7277d43a43bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 文字列から他の数値型への変換はそれぞれの型に対応する関数を用います。 対応表を次に示します。\n",
+        "# これらの関数の使い方はstoi関数と同じです。\n",
+        "# その他の型専用の関数も用意されていますが、基本的にint64_t型かdouble型にしてからキャストすればよいです。\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(2) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>型 </th><th> 文字列からの変換関数</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>int </td><td> stoi</td></tr>\n",
+        "<tr><td>int64_t </td><td> stoll</td></tr>\n",
+        "<tr><td>double </td><td> stod</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "Jvn-tY6iZoax",
+        "outputId": "a1f1bbf6-413b-4d82-83b7-c87c68f2891e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(2) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>型 </th><th> 文字列からの変換関数</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>int </td><td> stoi</td></tr>\n",
+              "<tr><td>int64_t </td><td> stoll</td></tr>\n",
+              "<tr><td>double </td><td> stod</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 他の数値型\n",
+        "# int型やdouble型以外にも様々な数値型が用意されています。 \n",
+        "# これらは扱える値の範囲や精度、使用するメモリの量が異なります。\n",
         "\n",
-        "int main() {\n",
-        "  string s = \"100\";\n",
-        "  int n = stoi(s);\n",
-        "  cout << n << endl;\n",
-        "}\n",
-        "実行結果\n",
-        "100\n",
-        "文字列から他の数値型への変換はそれぞれの型に対応する関数を用います。 対応表を次に示します。\n",
-        "\n",
-        "型\t文字列からの変換関数\n",
-        "int\tstoi\n",
-        "int64_t\tstoll\n",
-        "double\tstod\n",
-        "これらの関数の使い方はstoi関数と同じです。\n",
-        "\n",
-        "その他の型専用の関数も用意されていますが、基本的にint64_t型かdouble型にしてからキャストすればよいです。\n",
-        "\n",
-        "他の数値型\n",
-        "int型やdouble型以外にも様々な数値型が用意されています。 これらは扱える値の範囲や精度、使用するメモリの量が異なります。\n",
-        "\n",
-        "整数型\n",
-        "主な符号付き整数型\n",
+        "# 整数型\n",
+        "# 主な符号付き整数型\n",
         "\n",
         "型\t扱える値の範囲\t使用するメモリ量\n",
         "signed char\t−2 \n",
@@ -11316,6 +11572,7 @@
         " 〜2 \n",
         "63\n",
         " −1\t8 byte (64 bit)\n",
+        " \n",
         "主な符号無し整数型\n",
         "\n",
         "型\t扱える値の範囲\t使用するメモリ量\n",
@@ -11446,80 +11703,7 @@
         "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
       ],
       "metadata": {
-        "id": "u-UsnO5SoIXu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# さらにフォーマット指定子の部分を変更することで出力する小数の桁数などの出力の仕方を\n",
-        "# 変更することができます。\n",
-        "%%writefile temp.cpp\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "int main() {\n",
-        "  double pi = 3.14159265358979;\n",
-        "  // %.桁数f とすると小数点以下「桁数」だけ出力される\n",
-        "  printf(\"%.10lf\\n\", pi);\n",
-        "\n",
-        "  int x = 1;\n",
-        "  int y = 99;\n",
-        "  int z = 123;\n",
-        "  // %0桁数d とすると表示桁数が「桁数」に満たない場合に0埋めされる\n",
-        "  printf(\"%03d, %03d, %03d\\n\", x, y, z);\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "TkmyaqVmnzc_",
-        "outputId": "2b2ca109-f15a-4bb5-8225-2c0847a75210",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting temp.cpp\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp -o temp; ./temp"
-      ],
-      "metadata": {
-        "id": "-KMIorWZoE9l",
-        "outputId": "1c455bb6-672f-47db-98e5-303583921c99",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3.1415926536\n",
-            "001, 099, 123\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "9A2FQRKfeMoP"
+        "id": "aPQBJh2ZZ6pn"
       },
       "execution_count": null,
       "outputs": []
