Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM6eHQ8UpRtSJQcl2StOeES",
+      "authorship_tag": "ABX9TyMJWmQ8zjiGr5GIpryisRhq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12821,15 +12821,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "zT3Id7-QW73y"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# AA - 3.03.STLのコンテナ \n",
@@ -12864,7 +12855,7 @@
           "height": 161
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12923,7 +12914,7 @@
           "height": 138
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -12985,7 +12976,7 @@
           "height": 138
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -13012,26 +13003,77 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "0fJsRj497kYK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "STLのコンテナ\n",
-        "1.14.STLの関数でも触れましたが、 STLには便利な関数やデータ型が含まれています。 \n",
-        "今回はこの中からいくつかのコンテナ型を紹介します。\n",
+        "# STLのコンテナ\n",
+        "# 1.14.STLの関数でも触れましたが、 STLには便利な関数やデータ型が含まれています。 \n",
+        "# 今回はこの中からいくつかのコンテナ型を紹介します。\n",
         "\n",
-        "map\n",
-        "mapは連想配列や辞書と呼ばれるデータ型です。\n",
+        "# map\n",
+        "# mapは連想配列や辞書と呼ばれるデータ型です。\n",
         "\n",
-        "mapを用いると「特定の値に、ある値が紐付いている」ようなデータを簡単に扱うことができます。\n",
+        "# mapを用いると「特定の値に、ある値が紐付いている」ようなデータを簡単に扱うことができます。\n",
         "\n",
-        "例えば、氏名(string型の値)に成績(int型の値)が紐付いた次の表のようなデータを扱うとします。\n",
-        "\n",
-        "氏名\t成績\n",
-        "\"Alice\"\t100\n",
-        "\"Bob\"\t89\n",
-        "\"Charlie\"\t95\n",
-        "これらのデータをmapを用いて表すと、次のようになります。\n",
-        "\n",
-        "Copy\n",
+        "# 例えば、氏名(string型の値)に成績(int型の値)が紐付いた次の表のようなデータを扱うとします。\n",
+        "%%html\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>氏名</th><th>成績</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+        "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+        "<tr><td>\"Charlie\"</td><td>95</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "jOc7hA3t3Ysi",
+        "outputId": "475f32df-109e-441a-8c91-4c53523fc64c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>氏名</th><th>成績</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+              "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+              "<tr><td>\"Charlie\"</td><td>95</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# これらのデータをmapを用いて表すと、次のようになります。\n",
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         " \n",
@@ -13044,38 +13086,113 @@
         "  cout << score.at(\"Alice\") << endl;   // Aliceの成績\n",
         "  cout << score.at(\"Bob\") << endl;     // Bobの成績\n",
         "  cout << score.at(\"Charlie\") << endl; // Daveの成績\n",
-        "}\n",
-        "#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Ke7xpCpq75l0",
+        "outputId": "8c98a790-d16a-4055-a648-b9be756cdb48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp "
+      ],
+      "metadata": {
+        "id": "VYfMwQUqOezT",
+        "outputId": "193dbf86-4071-411f-d658-804f88db1af1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "89\n",
+            "95\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 以下説明のために、mapで扱うデータのうち、上の表でいう「氏名」の方をKey、\n",
+        "# 「成績」の方をValueと呼ぶことにします。\n",
         "\n",
-        "int main() {\n",
-        "  map<string, int> score;  // 名前→成績\n",
-        "  score[\"Alice\"] = 100;\n",
-        "  score[\"Bob\"] = 89;\n",
-        "  score[\"Charlie\"] = 95;\n",
+        "# 宣言\n",
+        "# mapは以下のように宣言します。\n",
         "\n",
-        "  cout << score.at(\"Alice\") << endl;   // Aliceの成績\n",
-        "  cout << score.at(\"Bob\") << endl;     // Bobの成績\n",
-        "  cout << score.at(\"Charlie\") << endl; // Daveの成績\n",
-        "}\n",
-        "実行結果\n",
-        "100\n",
-        "89\n",
-        "95\n",
-        "以下説明のために、mapで扱うデータのうち、上の表でいう「氏名」の方をKey、「成績」の方をValueと呼ぶことにします。\n",
+        "# map<Keyの型, Valueの型> 変数名;\n",
         "\n",
-        "宣言\n",
-        "mapは以下のように宣言します。\n",
-        "\n",
-        "map<Keyの型, Valueの型> 変数名;\n",
-        "操作\n",
-        "以下の各操作の説明において、次の表のようなデータがscoreという変数に入っているとします。\n",
-        "\n",
-        "氏名\t成績\n",
-        "\"Alice\"\t100\n",
-        "\"Bob\"\t89\n",
-        "\"Dave\"\t95\n",
-        "Copy\n",
+        "# 操作\n",
+        "# 以下の各操作の説明において、次の表のようなデータがscoreという変数に入っているとします。\n",
+        "%%html\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>氏名</th><th>成績</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+        "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+        "<tr><td>\"Charlie\"</td><td>95</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "YTa2NQr4OdVs",
+        "outputId": "7fffd898-d14c-490e-8576-d0b94839ddb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>氏名</th><th>成績</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+              "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+              "<tr><td>\"Charlie\"</td><td>95</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
@@ -13087,44 +13204,107 @@
         "  score[\"Bob\"] = 89;\n",
         "\n",
         "  // (scoreに対する処理)\n",
-        "}#include <bits/stdc++.h>\n",
-        "using namespace std;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "9TQ0EBu0OzPL",
+        "outputId": "3b12d4ee-d062-48dd-a436-1b8546abeed9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp "
+      ],
+      "metadata": {
+        "id": "RqNRdnw1O9fx"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 値の追加\n",
+        "# 変数[key] = value;\n",
         "\n",
-        "int main() {\n",
-        "  // 初期状態\n",
-        "  map<string, int> score;\n",
-        "  score[\"Alice\"] = 100;\n",
-        "  score[\"Dave\"] = 95;\n",
-        "  score[\"Bob\"] = 89;\n",
+        "# 例\n",
+        "# scoreに新しい成績のデータ「Charlie→70」を追加する例です。\n",
         "\n",
-        "  // (scoreに対する処理)\n",
-        "}\n",
-        "値の追加\n",
-        "変数[key] = value;\n",
-        "例\n",
-        "scoreに新しい成績のデータ「Charlie→70」を追加する例です。\n",
+        "# score[\"Charlie\"] = 70;\n",
         "\n",
-        "Copy\n",
-        "score[\"Charlie\"] = 70;score[\"Charlie\"] = 70;\n",
-        "「Charlie→70」を追加した直後のscoreの中身は次の表のようになっています。\n",
+        "# 「Charlie→70」を追加した直後のscoreの中身は次の表のようになっています。\n",
         "\n",
-        "操作前\n",
-        "氏名\t成績\n",
-        "\"Alice\"\t100\n",
-        "\"Bob\"\t89\n",
-        "\"Dave\"\t95\n",
-        "操作後\n",
-        "氏名\t成績\n",
-        "\"Alice\"\t100\n",
-        "\"Bob\"\t89\n",
-        "\"Charlie\"\t70\n",
-        "\"Dave\"\t95\n",
-        "値の削除\n",
-        "変数.erase(key);\n",
-        "keyに対応している関係を削除します。\n",
+        "# 操作後\n",
+        "%%html\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>氏名</th><th>成績</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+        "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+        "<tr><td>\"Charlie\"</td><td>70</td></tr>\n",
+        "<tr><td>\"Dave\"</td><td>95</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "DR3xilQKO68L",
+        "outputId": "b0a04d16-ae47-4270-a64a-a79f25166965",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>氏名</th><th>成績</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>\"Alice\"</td><td>100</td></tr>\n",
+              "<tr><td>\"Bob\"</td><td>89</td></tr>\n",
+              "<tr><td>\"Charlie\"</td><td>70</td></tr>\n",
+              "<tr><td>\"Dave\"</td><td>95</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 値の削除\n",
+        "# 変数.erase(key);\n",
+        "# keyに対応している関係を削除します。\n",
         "\n",
-        "例\n",
-        "scoreから「Bob→89」を削除するには次のようにします。\n",
+        "# 例\n",
+        "# scoreから「Bob→89」を削除するには次のようにします。\n",
         "\n",
         "Copy\n",
         "score.erase(\"Bob\");score.erase(\"Bob\");\n",
@@ -13884,7 +14064,7 @@
         "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
       ],
       "metadata": {
-        "id": "jOc7hA3t3Ysi"
+        "id": "D0D-gDKbPhKt"
       },
       "execution_count": null,
       "outputs": []
