--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMXa/mMrZH+eMYBLjIktyhK",
+      "authorship_tag": "ABX9TyPKACuF37vG8al7YDIwvHJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16133,12 +16133,12 @@
         "</table>"
       ],
       "metadata": {
-        "id": "FLAJF_JYbr7D",
-        "outputId": "9e350ba4-f296-47c9-ba1a-7b8d91a5828b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 182
-        }
+        },
+        "id": "FLAJF_JYbr7D",
+        "outputId": "9e350ba4-f296-47c9-ba1a-7b8d91a5828b"
       },
       "execution_count": 1,
       "outputs": [
@@ -16171,46 +16171,104 @@
     {
       "cell_type": "code",
       "source": [
-        "ビット演算を用いると集合を便利に扱えることがある\n",
-        "C++でビット列を扱うときは bitset を用いる\n",
+        "# ビット演算を用いると集合を便利に扱えることがある\n",
+        "# C++でビット列を扱うときは bitset を用いる\n",
         "\n",
-        "bitset<ビット数> 変数名;  // すべてのビットが0の状態で初期化される\n",
-        "bitset<ビット数> 変数名(\"ビット列(長さはビット数に合わせる)\");  // 指定したビット列で初期化される\n",
+        "# bitset<ビット数> 変数名;  // すべてのビットが0の状態で初期化される\n",
+        "# bitset<ビット数> 変数名(\"ビット列(長さはビット数に合わせる)\");  // 指定したビット列で初期化される\n",
         "\n",
-        "変数.set(位置, 値);  // ビットの値を変更\n",
-        "変数.test(位置);  // ビットの値を調べる\n",
+        "# 変数.set(位置, 値);  // ビットの値を変更\n",
+        "# 変数.test(位置);  // ビットの値を調べる\n",
         "\n",
-        "C++の整数型を用いることで(通常)64ビットまでのビット列を扱うことができる\n",
-        "ビット演算の演算子は優先順位を間違えやすいため、明示的に()でくくるようにする\n",
-        "ビット演算\n",
-        "初めにビット演算の概念について説明し、その後にC++でビット演算を行う方法を紹介します。\n",
+        "# C++の整数型を用いることで(通常)64ビットまでのビット列を扱うことができる\n",
+        "# ビット演算の演算子は優先順位を間違えやすいため、明示的に()でくくるようにする\n",
         "\n",
-        "ビット\n",
-        "「0」か「1」の2通りの状態を表現することができるデータの単位をビットといいます。\n",
+        "# ビット演算\n",
+        "# 初めにビット演算の概念について説明し、その後にC++でビット演算を行う方法を紹介します。\n",
         "\n",
-        "ビットをいくつか並べたものをビット列といいます。 例えば「0011」は4ビットのビット列で、「10101010」は8ビットのビット列です。\n",
+        "# ビット\n",
+        "# 「0」か「1」の2通りの状態を表現することができるデータの単位をビットといいます。\n",
         "\n",
-        "ビット演算\n",
-        "ビット列に関する演算をビット演算といいます。\n",
+        "# ビットをいくつか並べたものをビット列といいます。 例えば「0011」は4ビットのビット列で、「10101010」は8ビットのビット列です。\n",
         "\n",
-        "以下の6つのビット演算を紹介します。\n",
+        "# ビット演算\n",
+        "# ビット列に関する演算をビット演算といいます。\n",
         "\n",
-        "AND演算\n",
-        "OR演算\n",
-        "XOR演算\n",
-        "NOT演算\n",
-        "左シフト演算\n",
-        "右シフト演算\n",
-        "AND演算\n",
-        "下の表で定義される演算をAND演算（または論理積）といいます。 このAND演算をビット毎に適用する演算をビット毎のAND演算（bitwise AND）といいます。\n",
+        "# 以下の6つのビット演算を紹介します。\n",
         "\n",
-        "x\ty\tx AND y\n",
-        "0\t0\t0\n",
-        "0\t1\t0\n",
-        "1\t0\t0\n",
-        "1\t1\t1\n",
-        "AND演算ではx, yのビットが共に1の場合のみ結果が1になります。\n",
+        "# * AND演算\n",
+        "# * OR演算\n",
+        "# * XOR演算\n",
+        "# * NOT演算\n",
+        "# * 左シフト演算\n",
+        "# * 右シフト演算\n",
         "\n",
+        "# AND演算\n",
+        "# 下の表で定義される演算をAND演算（または論理積）といいます。 \n",
+        "# このAND演算をビット毎に適用する演算をビット毎のAND演算（bitwise AND）といいます。\n",
+        "# AND演算ではx, yのビットが共に1の場合のみ結果が1になります。\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(3) {\n",
+        "        color: red;\n",
+        "        text-align: center;\n",
+        "    }\n",
+        "</style>\n",
+        "<table border=\"1\">\n",
+        "<thead>\n",
+        "<tr><th>x</th><th>y</th><th>x AND y</th></tr>\n",
+        "</thead>\n",
+        "<tbody>\n",
+        "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+        "<tr><td>0</td><td>1</td><td>0</td></tr>\n",
+        "<tr><td>1</td><td>0</td><td>0</td></tr>\n",
+        "<tr><td>1</td><td>1</td><td>1</td></tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 135
+        },
+        "id": "8HTnB0rpbp_6",
+        "outputId": "25820eca-30bf-4fc7-8407-777f71e8a4f8"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<style>\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        text-align: center;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\">\n",
+              "<thead>\n",
+              "<tr><th>x</th><th>y</th><th>x AND y</th></tr>\n",
+              "</thead>\n",
+              "<tbody>\n",
+              "<tr><td>0</td><td>0</td><td>0</td></tr>\n",
+              "<tr><td>0</td><td>1</td><td>0</td></tr>\n",
+              "<tr><td>1</td><td>0</td><td>0</td></tr>\n",
+              "<tr><td>1</td><td>1</td><td>1</td></tr>\n",
+              "</tbody>\n",
+              "</table>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "具体例\n",
         "0111 AND 0100 = 0100\n",
         "縦に並べると次のようになります。\n",
@@ -16844,7 +16902,7 @@
         "Copyright Since 2012 ©AtCoder Inc. All rights reserved."
       ],
       "metadata": {
-        "id": "8HTnB0rpbp_6"
+        "id": "K_41AIQWqgow"
       },
       "execution_count": null,
       "outputs": []
